--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
   <head>
     <meta charset='utf-8'>
     <title>test</title>
+    <script type="text/javascript" src="test.js"></script>
   </head>
   <body>
-    hello world.
+    hello world.<br />
+    <button onclick="sample()">ボタン</button>
   </body>
 </html>
